# ahimsa

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  VERSION  error-codes.yaml  pyproject.toml
.github/actions/export-applug/: action.yml
.github/workflows/: build.yml  validate.yml
ahimsa/: __init__.py  _config.py  error_code_constants.py  error_codes.py  release_log.py  releases_grammar.py  stub_resolver.py  validate_recipe.py  validate_releases.py
ahimsa/locales/: en.json
docs/: applug-schema.md  architecture.md  ci-workflows.md  frozen-verify.md  package-layout.md  release-log.md  resolver.md  testing.md  validation-rules.md
docs/qa/: v0.0.1-system-test-plan.md
docs/release-notes/: v0.0.4.md
installer/: windows_installer.iss
recipes/pffp/: recipe.json
recipes/reference-app/: recipe.json
scripts/: _config.py  _dmg_settings.py  browser_verify.py  build_standalone.py  fetch_error_codes_sources.py  frozen_verify.py  gen_error_codes.py  make_dmg.py  render_releases_md.py  screen_manifest.py  smoke_launch.py  validate_recipe.py
scripts/tests/: test_validate_recipe.py
tests/: test_browser_verify.py  test_build_workflow.py  test_config_precedence.py  test_error_code_registry.py  test_error_codes.py  test_frozen_verify.py  test_github_resolver_integration.py  test_i18n_completeness_gate.py  test_invocation.py  test_packaging.py  test_release_log.py  test_screen_manifest.py  test_screen_schema_parity.py  test_validate_recipe.py  test_validate_releases.py
tests/fixtures/: release-log.yaml
tests/fixtures/error_codes/: example.yaml  manomatika.yaml
tests/fixtures/invalid_host/: config.json
tests/fixtures/no_config/: pyproject.toml
tests/fixtures/releases_md/: matika.md
tests/fixtures/valid_local_config/: config.json  recipe.json
