# Build backend: hatchling — PEP 621 native, lightweight, no setup.py required.
# Version is read from the VERSION file at build time via the regex source.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahimsa"
dynamic = ["version"]
description = "Build, validation, and release system for Matika-based applications."
readme = "README.md"
requires-python = ">=3.11"
# pyyaml: the release-log validator parses release-log.yaml (fetched from mm) at
# runtime to build the deleted-tag exemption set, so it is a production dependency.
dependencies = ["requests", "pyyaml"]

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^\n]+)"

[project.scripts]
ahimsa-validate = "ahimsa.validate_recipe:main"
ahimsa-validate-releases = "ahimsa.validate_releases:main"

[tool.hatch.build.targets.wheel]
packages = ["ahimsa"]

[tool.pytest.ini_options]
# Integration tier exercises the real GitHub API (no auth required — uses
# guaranteed-public test repos like octocat/Hello-World). Excluded from the
# default test run because real-network calls are slower and can transiently
# fail on network blips. Run explicitly with: pytest -m integration
markers = [
    "integration: real-network tests against public GitHub (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
