# Build backend: hatchling — PEP 621 native, lightweight, no setup.py required.
# Version is read from the VERSION file at build time via the regex source.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahimsa"
dynamic = ["version"]
description = "Build, validation, and release system for Matika-based applications."
readme = "README.md"
requires-python = ">=3.11"
# pyyaml: the release-log validator parses release-log.yaml (fetched from mm) at
# runtime to build the deleted-tag exemption set, so it is a production dependency.
# psutil: scripts/frozen_verify.py's reclaim-regression check (manomatika/matika#113)
# suspends/resumes a real frozen-app process and confirms a killed PID is gone.
dependencies = ["requests", "pyyaml", "psutil"]

[project.optional-dependencies]
test = ["pytest"]

[dependency-groups]
dev = ["pytest>=9.0"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^\n]+)"

[project.scripts]
ahimsa-validate = "ahimsa.validate_recipe:main"
ahimsa-validate-releases = "ahimsa.validate_releases:main"

[tool.hatch.build.targets.wheel]
packages = ["ahimsa"]

[tool.pytest.ini_options]
# The integration tier exercises the real GitHub API against guaranteed-public
# test repos (octocat/Hello-World). It runs as part of the full suite — nothing
# is deselected by default — so `pytest` (and CI's `pytest tests/`) exercises
# every test. The tier needs outbound network to api.github.com and
# raw.githubusercontent.com; it runs unauthenticated by design, but honours
# GITHUB_TOKEN when set (CI passes the auto-provisioned token for rate-limit
# headroom — see .github/workflows/validate.yml). The `integration` marker stays
# registered so `@pytest.mark.integration` is a known mark (no unknown-mark
# warning) and the tier can still be selected/deselected on demand
# (`pytest -m integration` / `pytest -m 'not integration'`) for offline work.
markers = [
    "integration: real-network tests against public GitHub (run by default; select with '-m integration', skip offline with '-m \"not integration\"')",
]
